--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,6 +45,9 @@ test:
 
 about:
   summary: Curve and image plotting tools for Python/Qt applications
+  description: |
+    PlotPy is is a Python library providing efficient 2D data-plotting features for interactive computing and signal/image processing application development.
+    It is part of the PlotPyStack project, aiming at providing a unified framework for creating scientific GUIs with Python and Qt.
   home: https://github.com/PlotPyStack/PlotPy
   doc_url: https://plotpy.readthedocs.io/
   license: BSD-3-Clause
