--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,13 +24,13 @@ requirements:
     - setuptools
     - wheel
     - numpy
-    - cython >=0.29.0,<0.30.dev0
+    - cython >=3.0
     - pip
   run:
     - python
-    - guidata >=3.6.2
-    - pythonqwt >=0.12.1
-    - scipy >=1.3
+    - guidata >=3.7
+    - pythonqwt >=0.14
+    - scipy >=1.5
     - scikit-image >=0.18
     - pillow
     - tifffile
